# womba

./: .aider.chat.history.md  .coverage.Roys-MacBook-Pro-2.local.41668.XFitmWNx  .dockerignore  .gitignore  API_USAGE.md  ATLASSIAN_CONNECT_TECHNICAL.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  COMPLETE_SYSTEM_SUMMARY.md  CONFLUENCE_BUG_FIX.md  DEPLOY_MCP_TO_K8S.md  Dockerfile  EXPANSION_SUMMARY.md  FINAL_SYSTEM_VALIDATION.md  FINAL_VALIDATION_SUMMARY.md  GITHUB_BRANCH_PROTECTION_SETUP.md  GITLAB_MCP_README.md  GOOGLE_AI_STUDIOS_PROMPT.md  HOW_TO_VIEW_INDEXED_DOCS.md  IMPACT_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TEST_SUMMARY.md  INSTALL.md  JIRA_INSTALLATION_GUIDE.md  JIRA_PAGINATION_FIX.md  K8S_MCP_OAUTH_SETUP.md  MANIFEST.in  MANUAL_OAUTH_SETUP_SUMMARY.md  MCP_DOCKER_MANUAL_SETUP.md  MCP_OAUTH_IMPLEMENTATION_SUMMARY.md  MCP_SETUP_STEPS.md  MCP_SETUP_WORKING.md  MCP_VALIDATION_RESULTS.md  Makefile  OPTIMIZATION_RESULTS.md  PACKAGE.md  PLAINID_DOCS_INDEXED.md  PLAT-13541_VALIDATION_REPORT.md  PROMPT_API_TEST_FIX.md  (+68 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
chroma/: rag_refresh_state.json
chroma/2bbd8710-10a3-4ad0-980c-22efdf3dc60a/: index_metadata.pickle
chroma/4669dcd6-e16c-49e8-9fa4-7bc6181c0603/: index_metadata.pickle
chroma/70d098b2-d277-4ac5-8d0f-bbb4a16aaa67/: index_metadata.pickle
debug_prompts/: prompt_PLAT-15596.txt
docker/: README.md
docs/: AUTOMATION.md  GITLAB_MCP_SETUP.md  KUBERNETES_RAG_STATS.md  MANUAL_OAUTH_SETUP.md  MCP_CONFIGURATION.md  MCP_DOCKER_OAUTH.md  MCP_DOCKER_SETUP.md  MCP_USAGE.md  PERFORMANCE_OPTIMIZATION.md  RAG.md  github-mcp-integration.md
k8s/: DEPLOY_AND_TEST.md  HOW_IT_WORKS.md  README.md  create-index-all-cronjob.sh  cronjob-index-all.yaml  rbac-index-all.yaml  test-cronjob-1min.yaml
src/aggregator/: api_docs_client.py  confluence_client.py  jira_client.py  story_collector.py
src/ai/: api_context_builder.py  confluence_processor.py  context_extractor.py  context_indexer.py  coverage_validator.py  embedding_service.py  enrichment_cache.py  gitlab_fallback_extractor.py  prompt_constants.py  prompts_analysis.py  prompts_compact.py  prompts_optimized.py  prompts_qa_focused.py  prompts_rewritten.py  qa_summarizer.py  quality_validator.py  rag_retriever.py  rag_store.py  reranker.py  story_enricher.py  swagger_extractor.py  test_plan_generator.py  test_plan_generator_new.py  test_plan_generator_old.py  two_stage_generator.py
test_plans/: test_plan_PLAT-11907.json  test_plan_PLAT-13541.json  test_plan_PLAT-15474.json  test_plan_PLAT-15596.json  test_plan_PLAT-16698.json  test_plan_PLAT-9923.json
tests/: conftest.py
(+90 files in other folders)
